# git-lfs-server-c

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  entrypoint.sh  pack.sh
.cargo/: config.toml
.github/workflows/: docker.yml  release.yml  rust-docker.yml  test.yml
cos/: CMakeLists.txt  cos.c
include/: base64.h  batch.h
src/: base64.c  base64.rs  batch.c  console.rs  cos.rs  http_service.c  main.c  main.rs  thread.rs
