[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
rust-crypto = "0.2.36"
reqwest = { version = "0.11", features = ["blocking"] }
openssl = "0.10.45"
log = "0.4.17"
env_logger = "0.10.0"
