[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
rust-crypto = "0.2.36"
reqwest = { version = "0.11", features = ["blocking"] }
openssl = "0.10.45"
log = { version = "0.4.17" , optional = true}
env_logger = { version = "0.10.0" , optional = true}


[features]
plog=["log","env_logger"]